--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "quiz-app-api",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,9 +13,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "knex": "^0.95.7",
-    "pg": "^8.6.0"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
